--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "since 2017-06"
   ],
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "antd": "^4.16.3",
     "autoprefixer": "^10.2.5",
+    "bootstrap": "^4.6.0",
     "postcss": "^8.3.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "tailwindcss": "^2.1.2"
   },
