add recuperation data into front request

--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@material-ui/icons": "^4.11.2",
     "antd": "^4.16.3",
     "autoprefixer": "^10.2.5",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "postcss": "^8.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "reactstrap": "^8.9.0",
     "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
