--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.2.5",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "jwt-decode": "^3.1.2",
     "postcss": "^8.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
